[package]
name = "me-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.12"
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["json"] }

serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
