[package]
name = "me-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
eyre = "0.6.12"
futures = "0.3.31"
reqwest = { version = "0.12.9", features = ["json", "cookies"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
solana-sdk = "2.1.4"
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
uuid = { version = "1.11.0", features = ["v4"] }
toml = "0.8.19"
sodiumoxide = "0.2.7"
bip39 = "2.1.0"
hex = "0.4.3"
ring = "0.17.8"
